# points_position_optimization

./: CMakeLists.txt  Kernel.h  LineKernel.h  PointKernel.cpp  PointKernel.h  README.md  kernel.h  main.cpp
Examples/: 3D_point_filtering.cpp  FilterDoubleYellow.cpp  FilterSolidLine.cpp
data/: scissor.ply  scissor.txt
include/: Kernel.h  LineKernel.h  PointKernel.h  common.h  utils.h
src/: Kernel.cpp  LineKernel.cpp  utils.cpp
